Enhance lima commands

--- a/ebpf-dev.yaml
+++ b/ebpf-dev.yaml
@@ -40,6 +40,67 @@ containerd:
   user: false
 
 provision:
+
+# python build dependencies
+- mode: system
+  script: |
+    #!/bin/bash
+    set -eux -o pipefail
+
+    apt update \
+    && apt install --yes \
+      git \
+      build-essential \
+      libssl-dev \
+      zlib1g-dev \
+      libbz2-dev \
+      liblzma-dev \
+      libreadline-dev \
+      libsqlite3-dev \
+      wget \
+      curl \
+      llvm \
+      libncurses5-dev \
+      libncursesw5-dev \
+      xz-utils \
+      tk-dev \
+    && apt autoremove --yes --allow-remove-essential \
+    && apt clean
+
+# pyenv
+- mode: user
+  script: |
+    #!/bin/bash
+    set -eux -o pipefail
+
+    PYENV_ROOT=/opt/pyenv
+
+    sudo git clone https://github.com/pyenv/pyenv.git $PYENV_ROOT
+    sudo chown -R $USER:$USER $PYENV_ROOT
+
+    if grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" "~/.bashrc"; then
+      echo "pyenv is already installed"
+    else
+      echo "export PYENV_ROOT=$PYENV_ROOT" >> ~/.bashrc
+      echo "export PATH=\$PYENV_ROOT/shims:\$PYENV_ROOT/bin:\$PATH" >> ~/.bashrc
+    fi
+
+# pyenv for root
+- mode: system
+  script: |
+    #!/bin/bash
+    set -eux -o pipefail
+
+    PYENV_ROOT=/opt/pyenv
+
+    if grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" "~/.bashrc"; then
+      echo "pyenv is already installed"
+    else
+      echo "export PYENV_ROOT=$PYENV_ROOT" >> ~/.bashrc
+      echo "export PATH=\$PYENV_ROOT/shims:\$PYENV_ROOT/bin:\$PATH" >> ~/.bashrc
+    fi
+
+# install docker
 - mode: system
   script: |
     #!/bin/bash
@@ -54,6 +115,7 @@ provision:
     #!/bin/bash
     set -eux -o pipefail
 
+    sudo groupadd docker
     sudo usermod -aG docker $USER
     sudo systemctl enable docker
     sudo systemctl restart docker
@@ -70,15 +132,36 @@ provision:
 #     docker context use rootless
 
 probes:
-- script: |
+
+# check docker is installed
+- mode: readiness
+  description: docker to be installed
+  script: |
     #!/bin/bash
     set -eux -o pipefail
 
-    if ! timeout 30s bash -c "until command -v docker >/dev/null 2>&1; do sleep 3; done"; then
+    if ! timeout 60s bash -c "until command -v docker >/dev/null 2>&1; do sleep 3; done"; then
       echo >&2 "docker is not installed yet"
       exit 1
     fi
-  hint: See "/var/log/cloud-init-output.log". in the guest
+  hint: |
+    Docker is not installed yet.
+    See "/var/log/cloud-init-output.log". in the guest
+
+# check pyenv is installed
+- mode: readiness
+  description: pyenv to be installed
+  script: |
+    #!/bin/bash
+    set -eux -o pipefail
+
+    if ! timeout 60s bash -c "until command -v pyenv >/dev/null 2>&1; do sleep 3; done"; then
+      echo >&2 "pyenv is not installed yet"
+      exit 1
+    fi
+  hint: |
+    Pyenv is not installed yet.
+    See "/var/log/cloud-init-output.log". in the guest
 
 # INFO: for rootless docker
 # - script: |
