--- a/ebpf-dev.yaml
+++ b/ebpf-dev.yaml
@@ -42,7 +42,7 @@ containerd:
 provision:
 
 # python build dependencies
-- mode: system
+- mode: dependency
   script: |
     #!/bin/bash
     set -eux -o pipefail
@@ -67,7 +67,26 @@ provision:
     && apt autoremove --yes --allow-remove-essential \
     && apt clean
 
-# pyenv
+- mode: system
+  script: |
+    #!/bin/bash
+    set -eux -o pipefail
+
+    PYENV_ROOT=/opt/pyenv
+
+    if ! test -f $PYENV_ROOT; then
+      sudo git clone https://github.com/pyenv/pyenv.git $PYENV_ROOT
+
+      sudo chown -R {{ .User }}:{{ .User }} $PYENV_ROOT
+
+      if sudo grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" /root/.bashrc; then
+        echo "pyenv is already installed"
+      else
+        sudo echo "export PYENV_ROOT=$PYENV_ROOT" >> /root/.bashrc
+        sudo echo "export PATH=\$PYENV_ROOT/shims:\$PYENV_ROOT/bin:\$PATH" >> /root/.bashrc
+      fi
+    fi
+
 - mode: user
   script: |
     #!/bin/bash
@@ -75,50 +94,27 @@ provision:
 
     PYENV_ROOT=/opt/pyenv
 
-    sudo git clone https://github.com/pyenv/pyenv.git $PYENV_ROOT
-    sudo chown -R $USER:$USER $PYENV_ROOT
-
-    if grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" "~/.bashrc"; then
+    if grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" ~/.bashrc; then
       echo "pyenv is already installed"
     else
       echo "export PYENV_ROOT=$PYENV_ROOT" >> ~/.bashrc
       echo "export PATH=\$PYENV_ROOT/shims:\$PYENV_ROOT/bin:\$PATH" >> ~/.bashrc
     fi
 
-# pyenv for root
 - mode: system
   script: |
     #!/bin/bash
     set -eux -o pipefail
 
-    PYENV_ROOT=/opt/pyenv
-
-    if grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" "~/.bashrc"; then
-      echo "pyenv is already installed"
-    else
-      echo "export PYENV_ROOT=$PYENV_ROOT" >> ~/.bashrc
-      echo "export PATH=\$PYENV_ROOT/shims:\$PYENV_ROOT/bin:\$PATH" >> ~/.bashrc
-    fi
-
-# install docker
-- mode: system
-  script: |
-    #!/bin/bash
-    set -eux -o pipefail
     command -v docker >/dev/null 2>&1 && exit 0
     export DEBIAN_FRONTEND=noninteractive
     curl -fsSL https://get.docker.com | sh
 
-# rootful docker
-- mode: user
-  script: |
-    #!/bin/bash
-    set -eux -o pipefail
+    groupadd docker
+    usermod -aG docker {{ .User }}
 
-    sudo groupadd docker
-    sudo usermod -aG docker $USER
-    sudo systemctl enable docker
-    sudo systemctl restart docker
+    systemctl enable --now docker
+    systemctl restart docker
 
 # INFO: rootless docker: ebpf cannot run on this mode
 # - mode: user
@@ -140,13 +136,11 @@ probes:
     #!/bin/bash
     set -eux -o pipefail
 
-    if ! timeout 60s bash -c "until command -v docker >/dev/null 2>&1; do sleep 3; done"; then
+    if ! timeout 30s bash -c "until command -v docker >/dev/null 2>&1; do sleep 1; done"; then
       echo >&2 "docker is not installed yet"
       exit 1
     fi
-  hint: |
-    Docker is not installed yet.
-    See "/var/log/cloud-init-output.log". in the guest
+  hint: See "/var/log/cloud-init-output.log". in the guest
 
 # check pyenv is installed
 - mode: readiness
@@ -155,13 +149,11 @@ probes:
     #!/bin/bash
     set -eux -o pipefail
 
-    if ! timeout 60s bash -c "until command -v pyenv >/dev/null 2>&1; do sleep 3; done"; then
+    if ! timeout 30s bash -c "until test -f /opt/pyenv/bin/pyenv >/dev/null 2>&1; do sleep 1; done"; then
       echo >&2 "pyenv is not installed yet"
       exit 1
     fi
-  hint: |
-    Pyenv is not installed yet.
-    See "/var/log/cloud-init-output.log". in the guest
+  hint: See "/var/log/cloud-init-output.log". in the guest
 
 # INFO: for rootless docker
 # - script: |
