--- a/ebpf-dev.yaml
+++ b/ebpf-dev.yaml
@@ -72,11 +72,12 @@ provision:
     #!/bin/bash
     set -eux -o pipefail
 
-    PYENV_ROOT=/opt/pyenv
+    export PYENV_ROOT=/opt/pyenv
+    if ! test -f $PYENV_ROOT/bin/pyenv; then
+      curl -L https://raw.githubusercontent.com/yyuu/pyenv-installer/master/bin/pyenv-installer | bash
+    fi
 
     if ! test -f $PYENV_ROOT; then
-      sudo git clone https://github.com/pyenv/pyenv.git $PYENV_ROOT
-
       sudo chown -R {{ .User }}:{{ .User }} $PYENV_ROOT
 
       if sudo grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" /root/.bashrc; then
@@ -84,6 +85,8 @@ provision:
       else
         sudo echo "export PYENV_ROOT=$PYENV_ROOT" >> /root/.bashrc
         sudo echo "export PATH=\$PYENV_ROOT/shims:\$PYENV_ROOT/bin:\$PATH" >> /root/.bashrc
+        sudo echo 'eval "$(pyenv init -)"' >> /root/.bashrc
+        sudo echo 'eval "$(pyenv virtualenv-init -)"' >> /root/.bashrc
       fi
     fi
 
@@ -92,29 +95,36 @@ provision:
     #!/bin/bash
     set -eux -o pipefail
 
-    PYENV_ROOT=/opt/pyenv
-
+    export PYENV_ROOT=/opt/pyenv
     if grep -Fxq "export PYENV_ROOT=$PYENV_ROOT" ~/.bashrc; then
       echo "pyenv is already installed"
     else
       echo "export PYENV_ROOT=$PYENV_ROOT" >> ~/.bashrc
       echo "export PATH=\$PYENV_ROOT/shims:\$PYENV_ROOT/bin:\$PATH" >> ~/.bashrc
+      echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+      echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
     fi
 
-- mode: system
+- mode: user
   script: |
     #!/bin/bash
     set -eux -o pipefail
 
     command -v docker >/dev/null 2>&1 && exit 0
+
+    if [ ! -e /etc/systemd/system/docker.socket.d/override.conf ]; then
+      sudo mkdir -p /etc/systemd/system/docker.socket.d
+
+      cat <<-EOF > /tmp/docker-socket-override.conf
+      [Socket]
+      SocketUser=$USER
+    EOF
+
+      sudo mv /tmp/docker-socket-override.conf /etc/systemd/system/docker.socket.d/override.conf
+    fi
+
     export DEBIAN_FRONTEND=noninteractive
     curl -fsSL https://get.docker.com | sh
-
-    groupadd docker
-    usermod -aG docker {{ .User }}
-
-    systemctl enable --now docker
-    systemctl restart docker
 
 # INFO: rootless docker: ebpf cannot run on this mode
 # - mode: user
@@ -129,19 +139,6 @@ provision:
 
 probes:
 
-# check docker is installed
-- mode: readiness
-  description: docker to be installed
-  script: |
-    #!/bin/bash
-    set -eux -o pipefail
-
-    if ! timeout 30s bash -c "until command -v docker >/dev/null 2>&1; do sleep 1; done"; then
-      echo >&2 "docker is not installed yet"
-      exit 1
-    fi
-  hint: See "/var/log/cloud-init-output.log". in the guest
-
 # check pyenv is installed
 - mode: readiness
   description: pyenv to be installed
@@ -151,6 +148,19 @@ probes:
 
     if ! timeout 30s bash -c "until test -f /opt/pyenv/bin/pyenv >/dev/null 2>&1; do sleep 1; done"; then
       echo >&2 "pyenv is not installed yet"
+      exit 1
+    fi
+  hint: See "/var/log/cloud-init-output.log". in the guest
+
+# check docker is installed
+- mode: readiness
+  description: docker to be installed
+  script: |
+    #!/bin/bash
+    set -eux -o pipefail
+
+    if ! timeout 30s bash -c "until command -v docker >/dev/null 2>&1; do sleep 1; done"; then
+      echo >&2 "docker is not installed yet"
       exit 1
     fi
   hint: See "/var/log/cloud-init-output.log". in the guest
